--- a/templates/upload.html
+++ b/templates/upload.html
@@ -80,7 +80,7 @@
     <div id="popupContainer"></div>
 
     <div id="credits">
-        <p>Google's Got Talent, a Gemini experiment | powered by Google Cloud, 2024 | made with love by <a href="mailto:andrewankenobi@google.com">andrewankenobi@</a></p>
+        <p>Google's Got Talent, a Gemini experiment | go/ggt-demo | powered by Google Cloud, 2024 | made with love by <a href="mailto:andrewankenobi@google.com">andrewankenobi@</a></p>
     </div>
 
     <script src="{{ url_for('static', filename='app.js') }}"></script>
